// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in <GifGrid /> should show <GifGrid /> correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInRight animate__delay-5s"
  >
    Attack on Titan
  </h3>
  <h4
    className="animate__animated animate__flash"
  >
    Loading...
  </h4>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests in <GifGrid /> should show items when useFetchGifs get used 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInRight animate__delay-5s"
  >
    Attack on Titan
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="Derwin"
      key="Derwin"
      title="Im a title"
      url="https://localhost/any/anything.jpg"
    />
    <GifGridItem
      id="Eduardo"
      key="Eduardo"
      title="Im a title vol.2"
      url="https://localhost/any/anythingVol2.jpg"
    />
  </div>
</Fragment>
`;
